# dash-agent-core

./: README.md  app.py  pyproject.toml  requirements.txt  seed_data.py
dash_agent/: storage.py  team.py
dash_agent/agents/: analyst.py  engineer.py  utils.py
dash_agent/knowledge/: examples.sql  metrics.json
dash_agent/knowledge/tables/: categories.json  order_items.json  orders.json  payments.json  products.json  reviews.json  shipping_details.json  users.json
