[project]
name = "project5-data-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.5.17",
    "faker>=40.13.0",
    "openai>=2.32.0",
    "pandas>=3.0.2",
    "pgvector>=0.4.2",
    "plotly>=6.7.0",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.3.3",
    "python-dotenv>=1.2.2",
    "snowflake-connector-python>=4.4.0",
    "sqlalchemy>=2.0.49",
    "strands-agents>=1.35.0",
    "strands-agents-tools>=0.4.1",
    "streamlit>=1.56.0",
]
